--- a/sass/base/_boilerplate.scss
+++ b/sass/base/_boilerplate.scss
@@ -23,3 +23,39 @@ select {
 ul {
   list-style: none;
 }
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.overlay {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  padding-top: 100px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.53);
+  -webkit-transition: 0.5s;
+  overflow: auto;
+  transition: all 0.3s linear;
+}
